fix: horizontal scroll

--- a/src/components/picker/picker-styles.scss
+++ b/src/components/picker/picker-styles.scss
@@ -15,6 +15,7 @@
 
   .categories {
     overflow-y: scroll;
+    overflow-x: hidden;
     width: 100%;
   }
 }
